--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
     repositories {
         mavenCentral()
     }
+
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.6.RELEASE")
     }
@@ -31,10 +32,8 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-actuator")
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
     compile("com.h2database:h2")
-
-    compile("org.projectlombok:lombok")
-    annotationProcessor("org.projectlombok:lombok")
+    compile("org.projectlombok:lombok:1.18.6")
+    annotationProcessor("org.projectlombok:lombok:1.18.6")
 
     testCompile("org.springframework.boot:spring-boot-starter-test")
 }
-
